--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Build Next.js app
         run: npm run build
+
+      - run: ls -al
     
       # Create Docker Image
       - uses: docker/setup-buildx-action@v2
