--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,7 @@ jobs:
         run: npm run build
         working-directory: app
 
-      - name: Build Next.js app
-        run: ls -al
+      - run: ls -al
         working-directory: app
 
       - run: ls -al
