--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       - run: ls -al
 
       - run: cp config/Dockerfile ./
-      - run: cp config/.dockerignore  ./
+      - run: cp config/.dockerignore\ ./
       - run: ls -al
     
       # Create Docker Image
