ci: update workflows config.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
           node-version: 18
 
       - run: ls -al
+        working-directory: config
       - run: node config/scripts.mjs
       - run: ls -al
 
