ci: update workflows config.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       - run: cp config/Dockerfile ./
 
       - name: Copy .dockerignore file
-        run: cp 'config/.dockerignore' ./
+        run: cp -R config/.dockerignore ./
         
       - run: ls -al
     
