--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,7 @@ jobs:
 
       - run: cp config/Dockerfile ./
 
-      - name: Compress uiw Example.
-        working-directory: zip
+      - name: Create dockerignore file.
         run: |
           cat > .dockerignore << EOF
           Dockerfile
