--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,7 @@ jobs:
 
       - run: ls -al
         working-directory: config
+      - run: ls -al
       - run: node config/scripts.mjs
       - run: ls -al
 
