--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
           EOF
  
       - run: ls -al
-    
+      
       # Create Docker Image
       - uses: docker/setup-buildx-action@v3
       - name: Login to Docker Hub
@@ -59,6 +59,7 @@ jobs:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - run: docker run -it --rm --privileged tonistiigi/binfmt --install all
       - name: Build and push image:latest
         uses: docker/build-push-action@v5
         with:
