--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,18 +52,22 @@ jobs:
  
       - run: ls -al
       
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       # Create Docker Image
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
           platforms: linux/amd64,linux/arm64
-        
+
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+        
       - name: Build and push image:latest
         uses: docker/build-push-action@v3
         with:
