--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,17 +49,16 @@ jobs:
           .next
           .git
           EOF
- 
-      - run: ls -al
-      
-      - name: Set up QEMU
+
+      - name: Setup QEMU
         uses: docker/setup-qemu-action@v3
+        with:
+          image: tonistiigi/binfmt:latest
+          platforms: all
 
       # Create Docker Image
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          platforms: linux/amd64,linux/arm64
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -67,11 +66,6 @@ jobs:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build manifests
-        run: |
-          echo "Re-tagging latest"
-          docker buildx imagetools create -t ${{ secrets.DOCKER_USER }}/zh-hans.react.dev:latest
-        
       - name: Build and push image:latest
         uses: docker/build-push-action@v3
         with:
