--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,12 +1,11 @@
-name: Build and Push
+name: Build and Deploy
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - v*
     paths-ignore:
       - '**/*.md'
-      - '**/*.yml'
 
 jobs:
   build:
@@ -75,4 +74,7 @@ jobs:
           push: true
           context: .
           platforms: linux/amd64,linux/arm64
-          tags: ${{ secrets.DOCKER_USER }}/zh-hans.react.dev:latest
+          tags: |
+            ${{ secrets.DOCKER_USER }}/zh-hans.react.dev:latest
+            ${{ secrets.DOCKER_USER }}/zh-hans.react.dev:${{ github.ref_name }}
+            
